--- a/fusion/example/CMakeLists.txt
+++ b/fusion/example/CMakeLists.txt
@@ -28,6 +28,7 @@ add_executable(spmm_spmm_fusion
 target_link_libraries(spmm_spmm_fusion
         fusion
         swbench::swbench
+        OpenMP::OpenMP_CXX
         )
 
 #target_compile_options(dag_decomp PRIVATE
