--- a/fusion/CMakeLists.txt
+++ b/fusion/CMakeLists.txt
@@ -10,6 +10,7 @@ add_subdirectory(aggregation)
 add_subdirectory(benchmark)
 
 set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
 
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/lib/)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/lib/)
