--- a/fusion/gcn/CMakeLists.txt
+++ b/fusion/gcn/CMakeLists.txt
@@ -44,10 +44,26 @@ if(TARGET MKL::MKL)
             OpenMP::OpenMP_CXX
             $<LINK_ONLY:MKL::MKL>
     )
+
+    add_executable(gcn_verify_demo
+            GCN_Verify_With_PyG_Demo.cpp
+    )
+
+    target_include_directories(gcn_verify_demo PRIVATE
+            $<TARGET_PROPERTY:MKL::MKL,INTERFACE_INCLUDE_DIRECTORIES>
+    )
+
+    target_link_libraries(gcn_verify_demo
+            fusion
+            swbench::swbench
+            OpenMP::OpenMP_CXX
+            $<LINK_ONLY:MKL::MKL>
+    )
 else ()
     add_executable(gcn_demo
             MultiLayer/GCN_Multi_Layer_Demo.cpp
             SingleLayer/GCN_Single_Layer_Demo_Utils.h
+            GCN_Verify_With_PyG_Demo.cpp
     )
 
     target_link_libraries(gcn_demo
