Add c++ torch training with one of the implementations

--- a/fusion/torch/CMakeLists.txt
+++ b/fusion/torch/CMakeLists.txt
@@ -1,13 +1,18 @@
+cmake_minimum_required(VERSION 3.22)
+project(fused_gcn)
 
-project(example-app)
-
+set(CMAKE_CXX_STANDARD 17)
+find_package(Python REQUIRED COMPONENTS Development)
 find_package(Torch REQUIRED)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
+find_package( OpenMP REQUIRED)
+include_directories(
+        ${SYM_AGG}/include
+        ${SYM_FUS}/include
+)
 
-
-
-
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS} -D_GLIBCXX_USE_CXX11_ABI=0")
 if(NOT TARGET MKL::MKL)
+
     set(MKL_INTERFACE "lp64")
     find_package(MKL CONFIG OPTIONAL_COMPONENTS)
 endif()
@@ -15,27 +20,25 @@ endif()
 if(TARGET MKL::MKL)
     add_definitions(-DMKL)
     message(STATUS "${MKL_IMPORTED_TARGETS}")
-    add_executable(example-app torchTest.cpp
-            Torch_GCN_Layer_Utils.h
-            Backend_Utils.h)
-    target_link_libraries(example-app
-            "${TORCH_LIBRARIES}"
+    add_executable(fused_gcn main.cpp)
+    #    target_compile_features(example_app PRIVATE cxx_std_11)
+
+    #    add_executable(example-app torchTest.cpp
+    #            Torch_GCN_Layer_Utils.h
+    #            Backend_Utils.h)
+    target_link_libraries(fused_gcn PRIVATE
+            ${TORCH_LIBRARIES}
+            Python::Python
             OpenMP::OpenMP_CXX
-            $<LINK_ONLY:MKL::MKL>)
-    target_include_directories(example-app PRIVATE
+            $<LINK_ONLY:MKL::MKL>
+            swbench::swbench
+            fusion)
+    target_include_directories(fused_gcn PUBLIC
             $<TARGET_PROPERTY:MKL::MKL,INTERFACE_INCLUDE_DIRECTORIES>
+            ${TORCH_INCLUDE_DIRS}
     )
-    set_property(TARGET example-app PROPERTY CXX_STANDARD 17)
+#    target_compile_definitions(fused_gcn
+#            PRIVATE VERSION_INFO=${EXAMPLE_VERSION_INFO})
+    #    set_property(TARGET example_app PROPERTY CXX_STANDARD 11)
 
 endif ()
-## The following code block is suggested to be used on Windows.
-## According to https://github.com/pytorch/pytorch/issues/25457,
-## the DLLs need to be copied to avoid memory errors.
-#if (MSVC)
-#    file(GLOB TORCH_DLLS "${TORCH_INSTALL_PREFIX}/lib/*.dll")
-#    add_custom_command(TARGET example-app
-#            POST_BUILD
-#            COMMAND ${CMAKE_COMMAND} -E copy_if_different
-#            ${TORCH_DLLS}
-#            $<TARGET_FILE_DIR:example-app>)
-#endif (MSVC)
