Write script for running on niagara

--- a/fusion/torch/CMakeLists.txt
+++ b/fusion/torch/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required(VERSION 3.22)
 project(fused_gcn)
 
 set(CMAKE_CXX_STANDARD 17)
+#if(NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
+#    set(CMAKE_CUDA_ARCHITECTURES 61)
+#endif()
 find_package(Python REQUIRED COMPONENTS Development)
 find_package(Torch REQUIRED)
 find_package( OpenMP REQUIRED)
