--- a/fusion/CMakeLists.txt
+++ b/fusion/CMakeLists.txt
@@ -59,5 +59,7 @@ target_link_libraries(fusion PRIVATE
         )
 
 
-add_subdirectory(gcn)
+
 add_subdirectory(example)
+add_subdirectory(gcn)
+add_subdirectory(jacobi)
