Add single precision demo:

--- a/fusion/example/CMakeLists.txt
+++ b/fusion/example/CMakeLists.txt
@@ -27,6 +27,20 @@ if(TARGET MKL::MKL)
             $<LINK_ONLY:MKL::MKL>
             OpenMP::OpenMP_CXX
     )
+
+    add_executable(spmm_spmm_fusion_sp
+            SpMM_SpMM_SP_Demo.cpp
+    )
+    target_include_directories(spmm_spmm_fusion_sp PRIVATE
+            $<TARGET_PROPERTY:MKL::MKL,INTERFACE_INCLUDE_DIRECTORIES>
+    )
+    target_link_libraries(spmm_spmm_fusion_sp
+            fusion
+            swbench::swbench
+            $<LINK_ONLY:MKL::MKL>
+            OpenMP::OpenMP_CXX
+    )
+
     add_executable(fusion_profiler
             Fusion_Profiler.cpp
     )
