Fix the cmake file

--- a/fusion/torch/CMakeLists.txt
+++ b/fusion/torch/CMakeLists.txt
@@ -5,8 +5,8 @@ set(CMAKE_CXX_STANDARD 17)
 #if(NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
 #    set(CMAKE_CUDA_ARCHITECTURES 61)
 #endif()
-find_package(Python REQUIRED COMPONENTS Development)
-find_package(Torch REQUIRED)
+find_package(Python OPTIONAL_COMPONENTS COMPONENTS Development)
+find_package(Torch OPTIONAL_COMPONENTS)
 find_package( OpenMP REQUIRED)
 include_directories(
         ${SYM_AGG}/include
@@ -20,7 +20,7 @@ if(NOT TARGET MKL::MKL)
     find_package(MKL CONFIG OPTIONAL_COMPONENTS)
 endif()
 
-if(TARGET MKL::MKL)
+if(TARGET MKL::MKL AND TARGET Python AND TARGET Torch)
     add_definitions(-DMKL)
     message(STATUS "${MKL_IMPORTED_TARGETS}")
     add_executable(fused_gcn GCNIntegratedTraining.cpp)
